wip weather conditions view, base protocols and structs added

--- a/PixiForecast/Adapters/Localizable.xcstrings
+++ b/PixiForecast/Adapters/Localizable.xcstrings
@@ -46,6 +46,9 @@
         }
       }
     },
+    "NO data" : {
+
+    },
     "retryTap" : {
       "extractionState" : "manual",
       "localizations" : {
